--- a/.github/workflows/master_gamebox-poz.yml
+++ b/.github/workflows/master_gamebox-poz.yml
@@ -36,6 +36,11 @@ jobs:
         with:
           name: php-app
           path: .
+          
+      - name: Credentials
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
   deploy:
     runs-on: ubuntu-latest
