--- a/.github/workflows/master_gamebox-poz.yml
+++ b/.github/workflows/master_gamebox-poz.yml
@@ -10,7 +10,7 @@
 name: Build and deploy PHP app to Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: MY_WEBAPP_NAME   # set this to your application's name
+  AZURE_WEBAPP_NAME: Gamebox-poz   # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   PHP_VERSION: '8.1'                  # set this to the PHP version to use
 
