--- a/.github/workflows/master_gamebox-poz.yml
+++ b/.github/workflows/master_gamebox-poz.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   build:
-    runs-on: apache-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -63,7 +63,7 @@ jobs:
           path: .
 
   deploy:
-    runs-on: apache-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'production'
